# Tasks

./: pyproject.toml
src/: hash decorator.py  search_number.py
src/async/: async_http_as_in_example.py  async_http_as_in_tz.py  results_as_in_tz.json
src/async/async_advanced/: async_http_advanced.py  list_urls.txt
src/async_advanced/: async_http_advanced_as_in_example.py  list_urls.txt  results_as_in_example.jsonl
src/database/: distributed thread.py  distributed thread_v2.py  distributed thread_v3.py  rate limiter.py  redis_line.py  task queues.py
src/multithreading/: paraller_processing_factorial.py  performance_results.csv  performance_results.json
src/python_basics/: class_atr.py  hash decorator.py  singltone.py
src/wsgi/: app_currency.py
